<resources>
    <string name="app_name">Doan</string>
    <string name="title_loading">Loading App</string>
    <string name="title_home">Trang chủ</string>
    <string name="titleFormLogin">Đăng Nhập</string>
    <string name="user">Tên đăng nhập </string>
    <string name="edt_user">Nhập tài khoản...</string>
    <string name="password">Mật khẩu </string>
    <string name="edt_password">Nhập mật khẩu...</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register">Đăng ký</string>
    <string name="titleFormRegister">Đăng Ký</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_retype">Nhập lại</string>
    <string name="hoten">Họ tên </string>
    <string name="edt_hoten">Nhập họ tên...</string>
    <string name="sodt">Số điện thoại </string>
    <string name="edt_sodt">Nhập số điện thoại...</string>
    <string name="adress">Địa chỉ </string>
    <string name="edt_diachi">Nhập địa chỉ...</string>
    <string name="welcome">CHÀO MỪNG BẠN ĐẾN VỚI ỨNG DỤNG QUẢN LÝ BÁN HÀNG TDC</string>
    <string name="footer_loading">Copy right Project Group | FIT-TDC 2020</string>
    <string name="logout">Đăng xuất</string>
    <string name="changepassword">Change password</string>
    <string name="danhmuc">Danh mục</string>
    <string name="sanpham">Sản phẩm</string>
    <string name="khohang">Kho hàng</string>
    <string name="hoadon">Hóa đơn</string>
    <string name="id_danhmuc">1</string>
    <string name="tendanhmuc">Tên danh mục</string>
    <string name="themdanhmuc">Thêm danh mục</string>
    <string name="nhaptendanhmuc">Nhập tên danh mục...</string>
    <string name="madanhmuc">Mã danh mục</string>
    <string name="nhapmadanhmuc">Nhập mã danh mục...</string>
    <string name="tenSP">Tên: </string>
    <string name="soluongSP">Số lượng: </string>
    <string name="giaSP">Giá: </string>
    <string name="danhmucSP">Danh mục: </string>
    <string name="allDanhMuc">Tất Cả Danh Mục</string>
    <string name="allSanPham">Tất Cả Sản Phẩm</string>
    <string name="qlSanPham">Quản lý sản phẩm</string>
    <string name="tenSP2">Tên sản phẩm</string>
    <string name="soluongSP2">Số lượng</string>
    <string name="giaSP2">Giá sản phẩm</string>
    <string name="danhmucSP2">Danh mục</string>
    <string name="motaSP">Mô tả:</string>
    <string name="motaSP2">Mô tả</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="sumSoluongSP">Tổng số lượng: </string>
    <string name="sumGiaSP">Tổng giá trị: </string>
    <string name="khoHangSP">Kho Hàng</string>
    <string name="timSP">Tìm kiếm</string>
    <string name="edtTimSP">Nhập sản phẩm...</string>
    <string name="sapXepSoluong">Sắp xếp số lượng</string>
    <string name="sapXepTheoGa">Sắp xếp theo giá</string>
    <string name="btn_Users">Người dùng</string>
    <string name="trangChu">Trang chủ</string>
    <string name="huawei">Huawei</string>
    <string name="iphone">Iphone</string>
    <string name="samsung">Samsung</string>
    <string name="product_information">Thông tin sản phẩm</string>
    <string name="dthuawei">Điện thoại Huawei</string>
    <string name="dtiphone">Điện thoại Iphone</string>
    <string name="dtsamsung">Điện thoại Samsung</string>
    <string name="order">Đặt hàng</string>
    <string name="cancel">Hủy</string>
    <string name="tenKH">Tên KH:</string>
    <string name="tongTien">Tổng tiền:</string>
    <string name="allHoadon">Tất cả hóa đơn</string>
    <string name="thongtinSanPham">Thông tin sản phẩm</string>
    <string name="thongtinKhachHang">Thông tin khách hàng</string>
    <string name="maHoaDon">Mã hóa đơn:</string>
    <string name="tenSP3">Tên sản phẩm:</string>
    <string name="soluongSP3">Số lượng:</string>
    <string name="giaSP3">Giá sản phẩm:</string>
    <string name="diachi2">Địa chỉ:</string>
    <string name="soDT2">Số ĐT:</string>
</resources>
