<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/setBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/colorDanhMuc"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/maHoaDon"/>
        <TextView
            android:id="@+id/txtMaHoaDon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/maHoaDon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/tongTien"/>
        <TextView
            android:id="@+id/txtTongtien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tongTien"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/tenSP3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/giaSP3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soluongSP3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtTenSP"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/tenSP2"/>
            <TextView
                android:id="@+id/txtGiaSP"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/giaSP2"/>
            <TextView
                android:id="@+id/txtSoluong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soluongSP2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenKH"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diachi2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soDT2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtTenKH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenKH"/>
            <TextView
                android:id="@+id/txtSoDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodt"/>
            <TextView
                android:id="@+id/txtDiaChi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>