<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorBgButton"
        android:layout_weight="2">
        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginRight="20dp"
            android:background="@drawable/register"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleFormRegister"
            android:textColor="@color/colorTextButton"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:width="80dp" />
            <EditText
                android:id="@+id/txtUsername_Login"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="#fff"
                android:hint="@string/edt_user" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:width="80dp" />

            <EditText
                android:id="@+id/txtPassword_Login"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:background="#fff"
                android:hint="@string/edt_password"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_Fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoten"
                android:width="80dp" />

            <EditText
                android:id="@+id/txtFullname"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="#fff"
                android:hint="@string/edt_hoten"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvNumberPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodt"
                android:width="80dp" />

            <EditText
                android:id="@+id/txtNumberPhone"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="#fff"
                android:inputType="number"
                android:hint="@string/edt_sodt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_Adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"
                android:width="80dp" />

            <EditText
                android:id="@+id/txtAdress"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="#fff"
                android:hint="@string/edt_diachi"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgButton"
            android:text="@string/btn_save"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnNhapLai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgButton"
            android:text="@string/btn_retype"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />
        <Button
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
</LinearLayout>