<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorBgButton"
        android:layout_weight="2">
        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginRight="20dp"
            android:background="@drawable/login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleFormLogin"
            android:textColor="@color/colorTextButton"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center|bottom"
            android:paddingBottom="20dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:width="80dp" />
            <EditText
                android:id="@+id/txtUsername_Login"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:background="#fff"
                android:hint="@string/edt_user" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:gravity="center|top"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:width="80dp" />

            <EditText
                android:id="@+id/txtPassword_Login"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:background="#fff"
                android:hint="@string/edt_password"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgButton"
            android:text="@string/btn_login"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgButton"
            android:text="@string/btn_register"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
</LinearLayout>