<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatHangActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tenSP2"/>
            <EditText
                android:id="@+id/edtTenSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/giaSP2" />
            <EditText
                android:id="@+id/edtGiaSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/soluongSP2"/>
            <EditText
                android:id="@+id/edtSoLuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tenKH"/>
            <EditText
                android:id="@+id/edtTenKH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/sodt"/>
            <EditText
                android:id="@+id/edtSoDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/adress"/>
            <EditText
                android:id="@+id/edtDiachi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBgButton"
            android:textColor="@color/colorTextButton"
            android:layout_marginRight="20dp"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:background="@color/colorBgButton"
            android:textColor="@color/colorTextButton"
            />
    </LinearLayout>
</LinearLayout>