<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/imgAnhSP"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/image"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="111dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:text="@string/tenSP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="25dp"
            android:text="@string/soluongSP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="25dp"
            android:text="@string/giaSP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="25dp"
            android:text="@string/danhmucSP" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tensp_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/tenSP" />

        <TextView
            android:id="@+id/lv_Soluong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/soluongSP" />

        <TextView
            android:id="@+id/tv_giasp_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/giaSP" />

        <TextView
            android:id="@+id/lv_Danhmuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/danhmucSP" />

    </LinearLayout>
</LinearLayout>